<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dragon_details_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dragon_image"
                android:layout_width="0dp"
                android:layout_height="256dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/medium_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/medium_margin" />

            <TextView
                android:id="@+id/dragon_details_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:textAppearance="@style/Details"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_image"
                tools:lines="4"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/dragon_details_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/active_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_details_text" />

            <ImageView
                android:id="@+id/dragon_details_status_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/status_image_desc"
                app:layout_constraintBottom_toBottomOf="@id/dragon_details_status_label"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="@id/dragon_details_status_label"
                tools:src="@drawable/ic_check_circle_black_24dp"
                tools:tint="@color/success" />

            <uk.co.zac_h.spacex.core.ui.LabelValueView
                android:id="@+id/dragon_details_crew_capacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:label="@string/crew_capacity_label"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_details_status_label"
                tools:text="@tools:sample/lorem" />

            <uk.co.zac_h.spacex.core.ui.LabelValueView
                android:id="@+id/dragon_details_first_flight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:label="@string/first_flight_label"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_details_crew_capacity"
                tools:text="@tools:sample/lorem" />

            <uk.co.zac_h.spacex.core.ui.LabelValueView
                android:id="@+id/dragon_details_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:label="@string/height_label"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_details_first_flight"
                tools:text="@tools:sample/lorem" />

            <uk.co.zac_h.spacex.core.ui.LabelValueView
                android:id="@+id/dragon_details_diameter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:label="@string/diameter_label"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_details_height"
                tools:text="@tools:sample/lorem" />

            <uk.co.zac_h.spacex.core.ui.LabelValueView
                android:id="@+id/dragon_details_payload_capacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:label="Payload Capacity"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/dragon_details_diameter"
                tools:text="@tools:sample/lorem" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>